--- a/scss/base/_generals.scss
+++ b/scss/base/_generals.scss
@@ -1,6 +1,6 @@
 html, body {
   scroll-behavior: smooth !important;
-  overflow-x: hidden !important;
+  overflow-x: clip;
   max-width: 100%;
 }
 
